Update all `build.tools` versions
Required by https://github.com/readthedocs/readthedocs.org/pull/12143

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,11 +37,11 @@ jobs:
 
             OS_NAMES="ubuntu-24.04 ubuntu-22.04 ubuntu-20.04"
             TOOLS=(
-              ["python"]="2.7.18 3.6.15 3.7.17 3.8.20 3.9.20 3.10.15 3.11.10 3.12.7 3.13.0 miniconda3-4.7.12 miniconda3-3.12-24.1.2-0 miniconda3-3.12-24.9.2-0 mambaforge-4.10.3-10 mambaforge-22.9.0-3 mambaforge-23.11.0-0"
-              ["nodejs"]="14.21.3 16.20.2 18.20.4 19.9.0 20.18.0 22.11.0 23.1.0"
-              ["ruby"]="3.3.5"
-              ["rust"]="1.55.0 1.61.0 1.64.0 1.70.0 1.75.0 1.78.0 1.82.0"
-              ["golang"]="1.17.13 1.18.10 1.19.13 1.20.14 1.21.13 1.22.8 1.23.2"
+              ["python"]="2.7.18 3.6.15 3.7.17 3.8.20 3.9.22 3.10.17 3.11.12 3.12.10 3.13.3 miniconda3-4.7.12 miniconda3-3.12-24.1.2-0 miniconda3-3.12-24.9.2-0 mambaforge-4.10.3-10 mambaforge-22.9.0-3 mambaforge-23.11.0-0"
+              ["nodejs"]="14.21.3 16.20.2 18.20.8 19.9.0 20.19.1 22.15.0 23.11.0"
+              ["ruby"]="3.3.8 3.4.3"
+              ["rust"]="1.55.0 1.61.0 1.64.0 1.70.0 1.75.0 1.78.0 1.82.0 1.86.0"
+              ["golang"]="1.17.13 1.18.10 1.19.13 1.20.14 1.21.13 1.22.12 1.23.8 1.24.2"
             )
             TOOL_NAMES="python nodejs ruby rust golang"
 
