Build: add miniforge3 to the supported python versions
Related https://github.com/readthedocs/readthedocs.org/pull/12647

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
 
             OS_NAMES="ubuntu-24.04 ubuntu-22.04 ubuntu-20.04"
             TOOLS=(
-              ["python"]="3.9.25 3.10.19 3.11.14 3.12.12 3.13.9 3.14.0"
+              ["python"]="3.9.25 3.10.19 3.11.14 3.12.12 3.13.9 3.14.0 miniforge3-25.11.0-1"
               ["nodejs"]="19.9.0 20.19.5 22.21.1 23.11.1 24.11.1 25.2.1"
               ["ruby"]="3.3.10 3.4.7"
               ["rust"]="1.78.0 1.82.0 1.86.0 1.91.1"
